applications/clusters/workload-dev/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: workload-dev
  namespace: traefik

spec:
  type: ExternalName
  externalName: gitops-dev-control-plane

  ports:
    - name: http
      port: 80

    - name: https
      port: 443
